@@ -17,6 +17,7 @@ CAY-1603 Improve custom ExtendedType registration API
 CAY-1608 Implement constructor injection support for DefaultAdhocObjectFactory
 CAY-1618 Create database adapters instances with proper injection
 CAY-1637 [PATCH] DataContextFactory is cumbersome to customize
+CAY-1638 [PATCH] Can't disable validation for CayenneContext
 
 Bug Fixes Since 3.1M3:
 
